Final code review
Pulizia, ottimizzazione e update della documentazione doxygen

--- a/html/classclasses_1_1_contatto.html
+++ b/html/classclasses_1_1_contatto.html
@@ -139,8 +139,8 @@ Membri pubblici</h2></td></tr>
 <p>Costruttore che si occupa della creazione di un contatto con i parametri ricevuti. </p>
 <dl class="params"><dt>Parametri</dt><dd>
   <table class="params">
-    <tr><td class="paramname">nome,nome</td><td>del contatto </td></tr>
-    <tr><td class="paramname">cognome,cognome</td><td>del contatto </td></tr>
+    <tr><td class="paramname">nome</td><td>nome del contatto </td></tr>
+    <tr><td class="paramname">cognome</td><td>cognome del contatto </td></tr>
     <tr><td class="paramname">numeriTelefono</td><td>array di massimo 3 numeri di telefono </td></tr>
     <tr><td class="paramname">indirizziEmail</td><td>array di massimo 3 indirizzi Email </td></tr>
   </table>
